# narratoric

./: .env.example  .gitignore  .ocamlformat  .opam-switch-create  LICENSE  Makefile  README.md  dune-project
.github/: dependabot.yml  labeler.yml
.github/workflows/: ci.yml  deps.yml  format.yml  release.yml
examples/: simple.story  skill_check_demo.story
lib/: dune  engine.ml  narratoric.ml  story.ml  story.mli  story_lexer.ml
lib/cli/: build.ml  check.ml  cli.ml  dune  init.ml  narrat_cli.ml  project.ml  run.ml  test.ml
lib/story/: ast.ml  codegen.ml  codegen.mli  lexer.ml  parser.ml
runtime/: README.md  package.json
scripts/: setup.sh
test/: dune  test_basic.ml  test_cli.ml  test_codegen_expect.ml  test_codegen_ounit.ml  test_error_reporting.ml  test_localization_demo.ml  test_metadata.ml  test_notification.ml  test_skill_check_continuation.ml  test_story_lexer.ml  test_story_parser.ml
