(executables
 (public_names
  test_cli
  test_codegen_ounit
  test_story_parser
  test_story_lexer
  test_error_reporting
  test_metadata
  test_localization_demo)
 (names
  test_cli
  test_codegen_ounit
  test_story_parser
  test_story_lexer
  test_error_reporting
  test_metadata
  test_localization_demo)
 (modules
  test_cli
  test_codegen_ounit
  test_story_parser
  test_story_lexer
  test_error_reporting
  test_metadata
  test_localization_demo)
 (libraries narratoric narrat_cli ounit2 base cmdliner))

(library
 (name test_codegen_expect)
 (modules test_codegen_expect)
 (libraries narratoric base stdio)
 (inline_tests)
 (preprocess
  (pps ppx_expect)))

(library
 (name test_notification)
 (modules test_notification)
 (libraries narratoric base stdio)
 (inline_tests)
 (preprocess
  (pps ppx_expect)))

(library
 (name test_skill_check_continuation)
 (modules test_skill_check_continuation)
 (libraries narratoric base stdio)
 (inline_tests)
 (preprocess
  (pps ppx_expect)))
